--- a/resources/kotlinManifest.properties
+++ b/resources/kotlinManifest.properties
@@ -9,6 +9,7 @@ manifest.impl.title.kotlin.compiler.ant.task=Kotlin Compiler Ant Tasks
 manifest.impl.title.kotlin.jvm.runtime=Kotlin Runtime
 manifest.impl.title.kotlin.jvm.reflect=Kotlin Reflect
 manifest.impl.title.kotlin.jvm.runtime.sources=Kotlin Runtime Sources
+manifest.impl.title.kotlin.jvm.reflect.sources=Kotlin Reflect Sources
 
 manifest.impl.title.kotlin.javascript.stdlib=Kotlin JavaScript StdLib
 manifest.spec.title.kotlin.javascript.lib=Kotlin JavaScript Lib
